--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="aboutUs.html">About Us</a>
                     </li>
+                </ul>
         </div>
         <div class = "d-flex justify-content-end">
 
@@ -59,6 +60,7 @@
     <div class="carousel-inner">
         <div class="carousel-item active">
             <img src="images/nowayhome.jpg" class="d-block w-100" alt="...">
+            <a class="btn btn-primary"  onclick="addToCart('James Bond: No Time To Die' , '13')">Add To Cart</a>
         </div>
     </div>
 </div>
@@ -89,8 +91,8 @@
                 <div class="card" style="width: 18rem;">
                     <img src="images/Venom_Let_There_Be_Carnage_poster.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Venom:<br>Let There Be Carnage<br>€15</h5>
-                        <a class="btn btn-primary" onclick="addToCart('Venom Let There Be Carnage' , '15')" >Add To Cart</a>
+                        <h5 class="card-title">Venom:<br>Let There Be Carnage<br>€20</h5>
+                        <a class="btn btn-primary" onclick="addToCart('Venom Let There Be Carnage' , '20')" >Add To Cart</a>
                     </div>
                 </div>
             </div>
@@ -98,8 +100,10 @@
                 <div class="card" style="width: 18rem;">
                     <img src="images/spiderman.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Spider-Man <br> No Way Home</h5>
-                        <a class="btn btn-primary" onclick="addToCart('Spider-Man No Way Home' , '15')" >Add To Cart</a>
+                        <h5 class="card-title">Spider-Man <br> No Way Home <br>€28</h5>
+                            <div class = "d-flex">
+                            <a class="btn btn-primary" onclick="addToCart('Spider-Man No Way Home' , '28')" >Add To Cart</a>
+                            </div>
                     </div>
                 </div>
             </div>
@@ -117,8 +121,8 @@
                 <div class="card" style="width: 18rem;">
                     <img src="images/flower%20boy.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Tyler The Creator <br>Flower Boy</h5>
-                        <a href="#" class="btn btn-primary">Add To Cart</a>
+                        <h5 class="card-title">Tyler The Creator <br>Flower Boy<br>€35</h5>
+                        <a href="#" class="btn btn-primary" onclick="addToCart('Tyler The Creator Flower Boy' , '35')">Add To Cart</a>
                     </div>
                 </div>
             </div>
@@ -126,8 +130,8 @@
                 <div class="card" style="width: 18rem;">
                     <img src="images/foresthilldrive.png" class="card-img-top img-thumbnail" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">J Cole<br>2014 Forest Hill Drive</h5>
-                        <a href="#" class="btn btn-primary">Add To Cart</a>
+                        <h5 class="card-title">J Cole<br>2014 Forest Hill Drive<br>€30</h5>
+                        <a href="#" class="btn btn-primary" onclick="addToCart('>J Cole 2014 Forest Hill Drive' , '30')">Add To Cart</a>
                     </div>
                 </div>
             </div>
@@ -135,8 +139,8 @@
                 <div class="card" style="width: 18rem;">
                     <img src="images/tickets%20to%20my%20downfall.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Machine Gun Kelly <br>Tickets To My Downfall</h5>
-                        <a href="#" class="btn btn-primary">Add To Cart</a>
+                        <h5 class="card-title">Machine Gun Kelly <br>Tickets To My Downfall<br>€33</h5>
+                        <a href="#" class="btn btn-primary" onclick="addToCart('Machine Gun Kelly Tickets To My Downfall' , '33')">Add To Cart</a>
                     </div>
                 </div>
             </div>
@@ -144,8 +148,8 @@
                 <div class="card" style="width: 18rem;">
                     <img src="images/abbeyroad2.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">The Beatles <br>Abbey Road</h5>
-                        <a href="#" class="btn btn-primary">Add To Cart</a>
+                        <h5 class="card-title">The Beatles <br>Abbey Road<br>€30</h5>
+                        <a href="#" class="btn btn-primary" onclick="addToCart('The Beatles Abbey Road' , '30')">Add To Cart</a>
                     </div>
                 </div>
             </div>
@@ -163,8 +167,8 @@
                 <div class="card" style="width: 18rem;">
                     <img src="images/nowthatswhaticallmusic110.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Now Thats What I Call Music <br>110</h5>
-                        <a href="#" class="btn btn-primary">Add To Cart</a>
+                        <h5 class="card-title">Now Thats What I Call Music 110<br>€20</h5>
+                        <a href="#" class="btn btn-primary" onclick="addToCart('Now Thats What I Call Music' , '20')">Add To Cart</a>
                     </div>
                 </div>
             </div>
@@ -172,8 +176,8 @@
                 <div class="card" style="width: 18rem;">
                     <img src="images/toletagoodthingdie.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Bruno Major<br>To Let A Good Thing Die</h5>
-                        <a href="#" class="btn btn-primary">Add To Cart</a>
+                        <h5 class="card-title">Bruno Major<br>To Let A Good Thing Die<br>€18</h5>
+                        <a href="#" class="btn btn-primary" onclick="addToCart('Bruno Major To Let A Good Thing Die' , '18')">Add To Cart</a>
                     </div>
                 </div>
             </div>
@@ -181,8 +185,8 @@
                 <div class="card" style="width: 18rem;">
                     <img src="images/softcell.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Softcell<br>Nonstop Erotic Cabanet</h5>
-                        <a href="#" class="btn btn-primary">Add To Cart</a>
+                        <h5 class="card-title">Softcell<br>Nonstop Erotic Cabanet<br>€18</h5>
+                        <a href="#" class="btn btn-primary" onclick="addToCart('Softcell Nonstop Erotic Cabanet' , '18')">Add To Cart</a>
                     </div>
                 </div>
             </div>
@@ -190,8 +194,8 @@
                 <div class="card" style="width: 18rem;">
                     <img src="images/Ed_Sheeran_-_Equals.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Ed Sheeran<br>Equals</h5>
-                        <a href="#" class="btn btn-primary">Add To Cart</a>
+                        <h5 class="card-title">Ed Sheeran<br>Equals<br>€22</h5>
+                        <a href="#" class="btn btn-primary" onclick="addToCart('Ed Sheeran Equals' , '22')">Add To Cart</a>
                     </div>
                 </div>
             </div>
@@ -208,8 +212,8 @@
                 <div class="card" style="width: 18rem;">
                     <img src="images/spiderman.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Spider-Man<br>No Way Home</h5>
-                        <a href="#" class="btn btn-primary">Add To Cart</a>
+                        <h5 class="card-title">Spider-Man<br>No Way Home<br>€28</h5>
+                        <a href="#" class="btn btn-primary" onclick="addToCart('Spider-Man No Way Home' , '28')">Add To Cart</a>
                     </div>
                 </div>
             </div>
@@ -217,8 +221,8 @@
                 <div class="card" style="width: 18rem;">
                     <img src="images/dune.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Dune</h5>
-                        <a href="#" class="btn btn-primary">Add To Cart</a>
+                        <h5 class="card-title">Dune<br>€22</h5>
+                        <a href="#" class="btn btn-primary" onclick="addToCart('Dune' , '22')">Add To Cart</a>
                     </div>
                 </div>
             </div>
@@ -226,8 +230,8 @@
                 <div class="card" style="width: 18rem;">
                     <img src="images/widow.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Black Widow</h5>
-                        <a href="#" class="btn btn-primary">Add To Cart</a>
+                        <h5 class="card-title">Black Widow<br>€24</h5>
+                        <a href="#" class="btn btn-primary" onclick="addToCart('Black Widow' , '24')">Add To Cart</a>
                     </div>
                 </div>
             </div>
@@ -235,14 +239,14 @@
                 <div class="card" style="width: 18rem;">
                     <img src="images/rednotice.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Red Notice<br></h5>
-                        <a href="#" class="btn btn-primary">Add To Cart</a>
+                        <h5 class="card-title">Red Notice<br>€20</h5>
+                        <a href="#" class="btn btn-primary" onclick="addToCart('Red Notice' , '20')">Add To Cart</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+    <button onclick="topFunction()" id="myBtn2" title="Go to top">Top</button>
 
 </div>
 
